--- a/assets/css/blue.css
+++ b/assets/css/blue.css
@@ -211,7 +211,7 @@ pre:last-child {
   ul,
   blockquote,
   pre {
-    margin-bottom: 28px;
+    margin-bottom: 1vh;
   }
 }
 
@@ -1771,7 +1771,7 @@ i.carousel__item-media-media {
 
 @media (min-width: 992px) {
   .carousel__control {
-    margin-top: 48px;
+    margin-top: auto;
   }
 }
 
